--- a/src/app/get-token/get-token.component.html
+++ b/src/app/get-token/get-token.component.html
@@ -12,7 +12,7 @@
       <mat-form-field class="example-full-width">
         <input matInput placeholder="eBird API密碼" [(ngModel)]="tokenkey">
       </mat-form-field>
-      <button mat-raised-button color="primary" (click)="ontest(tokenkey)">測試</button>
+      <button mat-raised-button color="primary" (click)="ontest()">測試</button>
     </p>
     <div>
       <button mat-button matStepperPrevious>上一步</button>
